[gd_scene load_steps=13 format=3 uid="uid://babpwpvq4iulc"]

[ext_resource type="Script" path="res://Scenes/wheat.gd" id="1_gdrmd"]
[ext_resource type="Texture2D" uid="uid://cd5olpcfgkxrw" path="res://Sprites/WindMillTileSet.png" id="1_w1din"]
[ext_resource type="Texture2D" uid="uid://fn4u8iyu3xmv" path="res://Sprites/LakeTileSet.png" id="3_bj44y"]
[ext_resource type="AudioStream" uid="uid://do1p5rmphf25" path="res://Sounds/Rustle3.wav" id="4_nxspe"]

[sub_resource type="Animation" id="Animation_c431v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMaps:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ko0yi"]
resource_name = "bend_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMaps:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_sdt43"]
resource_name = "bend_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMaps:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_whagy"]
_data = {
"RESET": SubResource("Animation_c431v"),
"bend_left": SubResource("Animation_ko0yi"),
"bend_right": SubResource("Animation_sdt43")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kinpu"]
texture = ExtResource("1_w1din")
1:0/0 = 0
2:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
1:4/0 = 0
2:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_waht1"]
texture = ExtResource("3_bj44y")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0

[sub_resource type="TileSet" id="TileSet_5kc37"]
sources/0 = SubResource("TileSetAtlasSource_kinpu")
sources/1 = SubResource("TileSetAtlasSource_waht1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tk0u"]
size = Vector2(12, 27)

[node name="Wheat" type="Area2D"]
collision_layer = 0
collision_mask = 22
script = ExtResource("1_gdrmd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_whagy")
}

[node name="TileMaps" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="TileMaps"]
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 262144, 8, -1, 262144, 9)

[node name="TileMap2" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 327680, 8, -1, 327680, 9)

[node name="TileMap3" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 393216, 8, -1, 393216, 9)

[node name="TileMap4" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 458752, 8, -1, 458752, 9)

[node name="TileMap5" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 524288, 8, -1, 524288, 9)

[node name="TileMap6" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 589824, 8, -1, 589824, 9)

[node name="TileMap7" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 196609, 8, -1, 196609, 9)

[node name="TileMap8" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 327681, 8, -1, 327681, 9)

[node name="TileMap9" type="TileMap" parent="TileMaps"]
visible = false
tile_set = SubResource("TileSet_5kc37")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 458753, 8, -1, 458753, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -14.5)
shape = SubResource("RectangleShape2D_7tk0u")

[node name="Rustle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nxspe")
max_distance = 500.0
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
